# elkapod_core

./: .gitignore  .gitmodules  README.md  repos.yaml  requirements.txt
.github/workflows/: main.yml
elkapod_bringup/: package.xml  setup.cfg  setup.py
elkapod_bringup/launch/: controllers.launch.py  hardware.launch.py  many.launch.py  rsp.launch.py  simulation.launch.py
elkapod_comm/: package.xml  setup.cfg  setup.py
elkapod_comm/elkapod_comm/: elkapod_comm_server.py  hexapod_protocol.py  hexapod_protocol_exceptions.py
elkapod_core_bringup/: package.xml  setup.cfg  setup.py
elkapod_core_bringup/launch/: elkapod_core_bringup.launch.py  elkapod_core_bringup_hardware.launch.py  elkapod_core_bringup_sim.launch.py  elkapod_core_hardware.launch.py  rsp.launch.py
elkapod_core_lib/: CMakeLists.txt  package.xml
elkapod_core_lib/include/elkapod_core_lib/: control.hpp  leg_kinematics.hpp  trajectory.hpp
elkapod_core_lib/src/: control.cpp  leg_kinematics.cpp  trajectory.cpp
elkapod_description/: CMakeLists.txt  elkapod_legs_control_comm.xml  elkapod_system.xml  package.xml
elkapod_description/config/: gz_bridge.yaml  leg_configuration.yaml  my_controllers.yaml
elkapod_description/hardware/: elkapod_comm.cpp  elkapod_legs_system.cpp  elkapod_system.cpp  spidev.cpp
elkapod_description/hardware/include/elkapod_legs_system/: elkapod_comm.hpp  elkapod_legs_system.hpp  spidev.hpp
elkapod_description/hardware/include/elkapod_system/: elkapod_comm.hpp  elkapod_system.hpp
elkapod_description/launch/: display.launch.py
elkapod_description/meshes/body/: back_grilles.STL  base_link.STL  front_grille.STL  left_side_grille.STL  lidar_base_footprint.STL  right_side_grille.STL  rubber_feet.STL
elkapod_description/meshes/left_leg/: FCP.STL  base_link.STL  linkA.STL  linkB.STL  linkC.STL
elkapod_description/meshes/right_leg/: FCP.STL  base_link.STL  linkA.STL  linkB.STL  linkC.STL
elkapod_description/ros2_control/: elkapod.ros2_control.xacro  legs_system.ros2_control.xacro  sim_system.ros2_control.xacro
elkapod_description/urdf/: colors.urdf.xacro  elkapod.urdf.xacro  imu.xacro  lidar.xacro  ros2_control.xacro
elkapod_description/urdf/body/: body.urdf.xacro
elkapod_description/urdf/left_leg/: left_leg.urdf.xacro
elkapod_description/urdf/right_leg/: right_leg.urdf.xacro
elkapod_description/urdf/sensors/: depth_camera.xacro  imu.xacro  lidar.xacro
elkapod_driver/: driver.py  hexapod_protocol.py
elkapod_examples/: package.xml  setup.cfg  setup.py
elkapod_examples/elkapod_examples/: back_and_forth.py  orientation_demo.py  pitch_demo.py  rectangle_drawer.py  rectangle_drawer_error.py  roll_demo.py  rot_waypoints.py  rotation_error_measurement.py
elkapod_gait_controller/: CMakeLists.txt  elkapod_gait_controller_plugin.xml  elkapod_gait_plugin.xml  package.xml
elkapod_gait_controller/include/elkapod_gait_controller/: elkapod_gait_controller.hpp  leg_path.hpp
elkapod_gait_controller/src/: elkapod_gait_controller.cpp  elkapod_gait_controller_parameter.yaml  elkapod_gait_controller_parameters.yaml  leg_path.cpp
elkapod_gait_controller/test/: test_load_elkapod_gait_controller.cpp
elkapod_gait_gen_cpp/: CMakeLists.txt  package.xml
elkapod_gait_gen_cpp/include/elkapod_gait_gen_cpp/: elkapod_gait_gen.hpp  leg_path.hpp
elkapod_gait_gen_cpp/src/: elkapod_gait_gen.cpp  elkapod_gait_gen_init.cpp  elkapod_leg_trajectory.cpp  leg_path.cpp
elkapod_gait_gen_py/: package.xml  setup.cfg  setup.py
elkapod_gait_gen_py/elkapod_gait_gen_py/: elkapod_gait.py  elkapod_leg_path.py  (+1 more)
elkapod_ik_controller/: CMakeLists.txt  LICENSE  elkapod_ik_plugin.xml  package.xml
elkapod_ik_controller/include/elkapod_ik_controller/: elkapod_ik_controller.hpp
elkapod_ik_controller/src/: elkapod_ik_controller.cpp  elkapod_ik_controller_parameter.yaml  elkapod_leg_inverse_kinematics.cpp
elkapod_kinematics/: CMakeLists.txt  package.xml
elkapod_left_leg_description/: package.xml
elkapod_leg_control_tests/: CMakeLists.txt  package.xml
elkapod_leg_control_tests/include/elkapod_leg_control_tests/: elkapod_leg_controller.hpp  elkapod_leg_inverse_kinematics.hpp  elkapod_trajectory_executioner.hpp
elkapod_leg_control_tests/src/: elkapod_control.cpp  elkapod_leg_controller.cpp  elkapod_leg_inverse_kinematics.cpp  elkapod_trajectory_executioner.cpp
elkapod_locomotion_examples/: package.xml  setup.cfg  setup.py
elkapod_motion/: package.xml  setup.cfg  setup.py
elkapod_motion_bringup/: package.xml  setup.cfg  setup.py
elkapod_motion_manager/: CMakeLists.txt  package.xml
elkapod_motion_manager/config/: elkapod_motion_manager.yaml  real_pid_config.yaml  sim_pid_config.yaml  twist_mux_config.yaml
elkapod_motion_manager/include/elkapod_motion_manager/: elkapod_leg_trajectory.hpp  elkapod_motion_manager.hpp
elkapod_motion_manager/launch/: elkapod_motion_manager.launch.py
elkapod_motion_manager/src/: elkapod_leg_trajectory.cpp  elkapod_motion_manager.cpp  elkapod_motion_manager_init.cpp
elkapod_msgs/: CMakeLists.txt  package.xml
elkapod_odometry/: CMakeLists.txt  package.xml
elkapod_odometry/config/: ekf_config.yaml  elkapod_binary_fsr_publisher_hardware_params.yaml  elkapod_binary_fsr_publisher_sim_params.yaml  elkapod_odometry_params.yaml
elkapod_odometry/include/elkapod_odometry/: elkapod_binary_fsr_publisher.hpp  elkapod_leg_kinematics.hpp  elkapod_odom.hpp  elkapod_touch_sensor_relay.hpp  imu_republisher.hpp  psocpp.h
elkapod_odometry/launch/: odom.launch.py
elkapod_odometry/src/: elkapod_binary_fsr_publisher.cpp  elkapod_binary_fsr_publisher_init.cpp  elkapod_leg_kinematics.cpp  elkapod_odom.cpp  elkapod_odom_init.cpp  elkapod_touch_sensor_relay.cpp  elkapod_touch_sensor_relay_init.cpp  imu_republisher.cpp  imu_republisher_init.cpp
elkapod_rot_tests/: package.xml  setup.cfg  setup.py
elkapod_trajectory_generator/: package.xml  setup.cfg  setup.py
elkapod_visualization_translation/: package.xml  setup.py
leg_integration/: README.md  angle_integration.py  integration.sh  inverse_kinematics_integration.py  leg_trajectory.py  trajectory_integration.py
(+23 files in other folders)
