<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elkapod_bringup</name>
  <version>1.8.0</version>
  <description>Bringup package for Elkapod walking robot</description>
  <maintainer email="piotrpatek17@gmail.com">Piotr Patek</maintainer>
  <maintainer email="baraniak.damian@gmail.com">Damian Baraniak</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2_controllers</depend>
  <depend>elkapod_description</depend>
  <depend>elkapod_motion_manager</depend>
  <depend>elkapod_ik_controller</depend>
  <depend condition="$RUN_MODE == pc">elkapod_gazebo</depend>
  <depend condition="$RUN_MODE == pc">rviz2</depend>
  <depend condition="$RUN_MODE == pc">elkapod_controller_gui</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
