<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elkapod_ik_controller</name>
  <version>1.0.0</version>
  <description>Inverse kinematics controller used in Elkapod walking robot</description>
  <maintainer email="piotrpatek17@gmail.com">Piotr Patek</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <build_depend>generate_parameter_library</build_depend>
  <build_depend>ros2_control_cmake</build_depend>

  <depend>backward_ros</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
