<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elkapod_motion_manager</name>
  <version>1.0.0</version>
  <description>Motion manager for Elkapod walking robot</description>
  <maintainer email="piotrpatek17@gmail.com">Piotr Patek</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
